--- a/app/assets/javascripts/Templates/myModalCommercelist.html
+++ b/app/assets/javascripts/Templates/myModalCommercelist.html
@@ -52,6 +52,6 @@ tr:hover {background-color:#f5f5f5;}
   
   <div class="modal-footer">
     <button type="button" class="btn btn-warning" ng-click="cancel()">Cancel</button>
-    <button type="submit" class="btn primary-btn">Valid</button>
+    <button type="submit" ng-click="newOrder()" class="btn primary-btn">Valid</button>
   </div>
 </form>
