--- a/app/assets/javascripts/Templates/myModalOrder.html.erb
+++ b/app/assets/javascripts/Templates/myModalOrder.html.erb
@@ -1,47 +1,70 @@
 <div class="modal-header">
-	<h3 class="modal-title" id="modal-title">PRODUCTS</h3>
+	<!--<h3 class="modal-title" id="modal-title">PRODUCTS</h3>-->
+	<div class="pull-right">
+		<ngcart-summary></ngcart-summary>
+	</div>
 </div>
 <div class="modal-body" id="modal-body">
-<div class="container">
-	<div class="row" ng-switch="nbproduit">
-		<div ng-switch-when="0">
-			<div>
-			  <strong>Désolé!</strong> Ce commerce n'a pas de produit en stock
-			</div>
-		</div>
-		<div ng-switch-default>
-			<div class="row">
-				<div ng-repeat="produit in produits">
-				<!--
-				<div class="col-md-3 col-sm-4 col-xs-6">
-					<div class="dummy"></div>
-					<a href="#x" class="thumbnail purple">{{produit.name}}</a>
+	<div class="container">
+		<div class="row" ng-switch="nbproduit">
+			<div ng-switch-when="0">
+				<div>
+				  <strong>Désolé!</strong> Ce commerce n'a pas de produit en stock
 				</div>
-				-->
+			</div>
+			<div ng-switch-default>
+				<div class="row">
+					<uib-tabset active="active">
+						<uib-tab index="0" heading="Product">
+							<div ng-repeat="produit in produits">
+							<!--
+							<div class="col-md-3 col-sm-4 col-xs-6">
+								<div class="dummy"></div>
+								<a href="#x" class="thumbnail purple">{{produit.name}}</a>
+							</div>
+							-->
 
-					<div class="col-md-4">
-						<figure class="card card-product">
-							<%= image_tag "ava1.png", class:"img-wrap" %>
-							<figcaption class="info-wrap">
-									<h4 class="title">{{produit.name}}</h4>
-									<p class="desc">Some small description goes here</p>
-									<div class="rating-wrap">
-										<div class="label-rating">132 reviews</div>
-										<div class="label-rating">154 orders </div>
-									</div> <!-- rating-wrap.// -->
-							</figcaption>
-							<div class="bottom-wrap">
-								<a href="" class="btn btn-sm btn-primary pull-right">Order Now</a>	
-								<div class="price-wrap h5">
-									<span class="price-new">{{ produit.unitprice | currency }}</span> <del class="price-old">$1980</del>
-								</div> <!-- price-wrap.// -->
-							</div> <!-- bottom-wrap.// -->
-						</figure>
-					</div> <!-- col // -->
+								<div class="col-md-4">
+									<figure class="card card-product">
+										<%= image_tag "ava1.png", class:"img-wrap" %>
+										<figcaption class="info-wrap">
+												<h4 class="title">{{produit.name}}</h4>
+												<p class="desc">Some small description goes here</p>
+												<div class="rating-wrap">
+													<div class="label-rating">132 reviews</div>
+													<div class="label-rating">154 orders </div>
+												</div> <!-- rating-wrap.// -->
+												<div class="price-wrap h5">
+													<span class="price-new">Price : <strong> {{ produit.unitprice | currency }} </strong></span> 
+													<!--<del class="price-old">$1980</del>-->
+												</div> <!-- price-wrap.// -->
+										</figcaption>
+										<div class="bottom-wrap">
+											<!--
+											<button type="button" ng-click="" class="btn btn-sm btn-primary pull-right">Order Now</button>
+											-->
+								            <ngcart-addtocart id="{{ produit.id }}" name="{{ produit.name }}" price="{{ produit.unitprice }}" quantity="1" quantity-max="{{ produit.unitsinstock }}">Add to Cart
+								            </ngcart-addtocart>
+										</div> <!-- bottom-wrap.// -->
+									</figure>
+								</div> <!-- col // -->
+							</div>
+						</uib-tab>
+					</uib-tabset>
 				</div>
 			</div>
 		</div>
 	</div>
+	
+<hr>
+
+<ngcart-cart></ngcart-cart>
+
+<ngcart-checkout service="log">Checkout</ngcart-checkout>
+
+<!--
+<a href="#/products" class="browse-link">Keep Browsing</a>
+-->
 </div>
 
 <!--
